--- a/imports/ui/home.css
+++ b/imports/ui/home.css
@@ -8,6 +8,17 @@
     /*background-color: yellow;*/
 /*}*/
 
+.homeworkTableHeader {
+    font-size: 15px;
+}
+
+
+
+
+.glyphicon.glyphicon-alert {
+    font-size: 18px;
+}
+
 .glyphicon.glyphicon-home {
     font-size: 50px;
 }
@@ -53,6 +64,10 @@ ul {
 
 .pointPanel.row {
     border-style: solid;
+}
+
+table, th, td {
+    border: 1px solid black;
 }
 @media screen and (min-width:768px) and (max-width:991px) {
     body {
