--- a/imports/ui/home.css
+++ b/imports/ui/home.css
@@ -8,113 +8,241 @@
 /*background-color: yellow;*/
 /*}*/
 
-img {
-    /*display: block;*/
-    /*margin: auto;*/
-    /*width: 40%;*/
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+html, body {
+    height: 100%;
 }
 
-.eaNavbar {
-    /*background-color: yellow;*/
-    border-bottom-style: solid;
-    /*padding: 0px;*/
+.wrapper, .row {
+    height: 100%;
+    margin-left:0;
+    margin-right:0;
 }
 
-.navBarItem {
-    border-left-style: solid;
-}
-.sidebar {
-    border-right-style: solid;
-    border-left-style: solid;
-    /*padding: 10px;*/
-    /*align-items: center;*/
+.wrapper:before, .wrapper:after,
+.column:before, .column:after {
+    content: "";
+    display: table;
 }
 
-.eaLogoSideBar {
-    text-align: center;
-    border-bottom-style: solid;
+.wrapper:after,
+.column:after {
+    clear: both;
 }
 
-.homeSideBar {
-    text-align: center;
-    border-bottom-style: solid;
+#sidebar {
+    background-color: #eee;
+    padding-left: 0;
+    float: left;
+    min-height: 100%;
 }
 
-.sideBarItem {
-    text-align: center;
-    border-bottom-style: solid;
-    padding-bottom: 15px;
+#sidebar .collapse.in {
+    display: inline;
 }
 
-/*li {*/
+#sidebar > .nav>li>a {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#main {
+    padding: 15px;
+    left: 0;
+}
+
+/*
+ * off canvas sidebar
+ * --------------------------------------------------
+ */
+@media screen and (max-width: 768px) {
+    #sidebar {
+        min-width: 44px;
+    }
+
+    #main {
+        width: 1%;
+        left: 0;
+    }
+
+    #sidebar .visible-xs {
+        display:inline !important;
+    }
+
+    .row-offcanvas {
+        position: relative;
+        -webkit-transition: all 0.4s ease-in-out;
+        -moz-transition: all 0.4s ease-in-out;
+        transition: all 0.4s ease-in-out;
+    }
+
+    .row-offcanvas-left.active {
+        left: 45%;
+    }
+
+    .row-offcanvas-left.active .sidebar-offcanvas {
+        left: -45%;
+        position: absolute;
+        top: 0;
+        width: 45%;
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+    .row-offcanvas {
+        position: relative;
+        -webkit-transition: all 0.25s ease-out;
+        -moz-transition: all 0.25s ease-out;
+        transition: all 0.25s ease-out;
+    }
+
+    .row-offcanvas-left.active {
+        left: 3%;
+    }
+
+    .row-offcanvas-left.active .sidebar-offcanvas {
+        left: -3%;
+        position: absolute;
+        top: 0;
+        width: 3%;
+        text-align: center;
+        min-width:42px;
+    }
+
+    #main {
+        left: 0;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*img {*/
+    /*!*display: block;*!*/
+    /*!*margin: auto;*!*/
+    /*!*width: 40%;*!*/
+    /*text-align: center;*/
+    /*padding-top: 5px;*/
+    /*padding-bottom: 5px;*/
+/*}*/
+
+/*.eaNavbar {*/
+    /*!*background-color: yellow;*!*/
+    /*border-bottom-style: solid;*/
+    /*!*padding: 0px;*!*/
+/*}*/
+
+/*.navBarItem {*/
+    /*border-left-style: solid;*/
+/*}*/
+/*.sidebar {*/
+    /*border-right-style: solid;*/
+    /*border-left-style: solid;*/
+    /*!*padding: 10px;*!*/
+    /*!*align-items: center;*!*/
+/*}*/
+
+/*.eaLogoSideBar {*/
     /*text-align: center;*/
     /*border-bottom-style: solid;*/
 /*}*/
 
-.homeworkTableHeader {
-    font-size: 15px;
-}
+/*.homeSideBar {*/
+    /*text-align: center;*/
+    /*border-bottom-style: solid;*/
+/*}*/
 
-.glyphicon.glyphicon-alert {
-    font-size: 18px;
-}
+/*.sideBarItem {*/
+    /*text-align: center;*/
+    /*border-bottom-style: solid;*/
+    /*padding-bottom: 15px;*/
+/*}*/
 
-.glyphicon.glyphicon-home {
-    font-size: 50px;
-    padding-top: 15px;
-    padding-bottom: 5px;
-}
+/*!*li {*!*/
+    /*!*text-align: center;*!*/
+    /*!*border-bottom-style: solid;*!*/
+/*!*}*!*/
 
-.glyphicon.glyphicon-time {
-    font-size: 50px;
-    padding-top: 15px;
-    padding-bottom: 5px;
-}
+/*.homeworkTableHeader {*/
+    /*font-size: 15px;*/
+/*}*/
 
-.glyphicon.glyphicon-file {
-    font-size: 50px;
-    padding-top: 15px;
-    padding-bottom: 5px;
-}
+/*.glyphicon.glyphicon-alert {*/
+    /*font-size: 18px;*/
+/*}*/
 
-.glyphicon.glyphicon-shopping-cart {
-    font-size: 50px;
-    padding-top: 15px;
-    padding-bottom: 5px;
-}
+/*.glyphicon.glyphicon-home {*/
+    /*font-size: 50px;*/
+    /*padding-top: 15px;*/
+    /*padding-bottom: 5px;*/
+/*}*/
 
-p {
-    /*border-color: black;*/
+/*.glyphicon.glyphicon-time {*/
+    /*font-size: 50px;*/
+    /*padding-top: 15px;*/
+    /*padding-bottom: 5px;*/
+/*}*/
+
+/*.glyphicon.glyphicon-file {*/
+    /*font-size: 50px;*/
+    /*padding-top: 15px;*/
+    /*padding-bottom: 5px;*/
+/*}*/
+
+/*.glyphicon.glyphicon-shopping-cart {*/
+    /*font-size: 50px;*/
+    /*padding-top: 15px;*/
+    /*padding-bottom: 5px;*/
+/*}*/
+
+/*p {*/
+    /*!*border-color: black;*!*/
+    /*!*border-style: solid;*!*/
+    /*!*border-width: 3px;*!*/
+    /*text-align: center;*/
+/*}*/
+
+/*ul {*/
+    /*!*border-style: solid;*!*/
+    /*list-style-type: none;*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+/*}*/
+
+/*.homeworkPanel.row {*/
     /*border-style: solid;*/
-    /*border-width: 3px;*/
-    text-align: center;
-}
+/*}*/
 
-ul {
+/*.upcomingPanel.row {*/
     /*border-style: solid;*/
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
+/*}*/
 
-.homeworkPanel.row {
-    border-style: solid;
-}
+/*.pointPanel.row {*/
+    /*border-style: solid;*/
+/*}*/
 
-.upcomingPanel.row {
-    border-style: solid;
-}
+/*table, th, td {*/
+    /*border: 1px solid black;*/
+/*}*/
 
-.pointPanel.row {
-    border-style: solid;
-}
 
-table, th, td {
-    border: 1px solid black;
-}
+
+
+
+
+
+
+
+
 
 /*@media screen and (min-width:768px) and (max-width:991px) {*/
 /*body {*/
