Created Homework Due Soon Panel

--- a/imports/ui/table.css
+++ b/imports/ui/table.css
@@ -4,20 +4,47 @@
 
 .homeworkTableHeader {
     font-size: 16pt;
-    margin: 20px;
+    margin: 10px;
 
 }
 
 .numberCircle {
     border-radius: 50%;
-    width: 36px;
-    height: 36px;
-    padding: 8px;
+    width: 50px;
+    height: 50px;
+    padding: 4px;
 
     background: #fff;
     border: 2px solid #666;
     color: #666;
     text-align: center;
 
-    font: 32px Arial, sans-serif;
+    font: 36px Arial, sans-serif;
+}
+
+.homeworkLabel {
+    font-size: 16px;
+}
+
+.homeworkDeadline {
+    color: red;
+}
+
+.homeworkItem {
+    padding-top: 5px;
+    border-top-style: solid;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.glyphicon.glyphicon-ok {
+    color: green;
+}
+
+.glyphicon.glyphicon-remove {
+    color: red;
+}
+
+.fa.fa-exclamation {
+    color: orange;
 }
